# Etchant

./: .gitignore  CLAUDE.md  DATA_SHOPPING_LIST.md  pyproject.toml  setup-distrobox.sh
constraints/: ams1117_layout.yaml  design_rules.yaml  esp32c3_wroom02_layout.yaml  jlcpcb_manufacturing.yaml  lm2596_layout.yaml  tps563200_layout.yaml
etchant/: cli.py
etchant/agents/: agent.py  benchmark.py  executor.py  tools.py
etchant/circuits/: __init__.py  base.py  buck_converter.py  generative_boost.py  generative_buck.py  generative_ldo.py  ldo_regulator.py  led_driver.py  mcu_breakout.py  sensor_breakout.py
etchant/core/: bom.py  comparison.py  component_selector.py  constraint_engine.py  ee_calculations.py  manufacturing.py  models.py  serialization.py  topology_advisor.py
scripts/: drc_gate.py  full_pipeline.py  patch_skidl.py  test_pcbnew_api.py  test_placement.py  test_zone_drc_api.py
tests/: conftest.py  test_agent.py  test_agent_tools.py  test_benchmark.py  test_bom.py  test_buck_converter.py  test_cli.py  test_comparison.py  test_component_selector.py  test_constraint_engine.py  test_design_export.py  test_drc_report.py  test_ee_calculations.py  test_executor.py  test_generative_boost.py  test_generative_buck.py  test_generative_ldo.py  test_integration.py  test_jlcparts_adapter.py  test_jlcpcb_parts.py  test_ldo_regulator.py  test_manufacturing.py  test_models.py  test_netlist_builder.py  test_pin_mapping.py  test_placement.py  test_project_writer.py  test_registry.py  test_seed_parts.py  test_serialization.py  test_topology_advisor.py  test_webench_loader.py
(+20 files in other folders)
